# daily-writing

./: .pre-commit-config.yaml  LICENSE  README.md  data.json  endpoint.json  pyproject.toml
.github/: renovate.json5
.github/workflows/: ci.yml
daily_writing/: __main__.py  artifacts.py  atom.py  build.py  build_context.py  cms.py  fonts.py  html.py  i18n.py  models.py  normalize.py  serve.py  settings.py  social_preview.py  utils.py
daily_writing/static/: style.css
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_854293ef6dbebf8e___main___py.html  z_854293ef6dbebf8e_artifacts_py.html  z_854293ef6dbebf8e_atom_py.html  z_854293ef6dbebf8e_build_context_py.html  z_854293ef6dbebf8e_build_py.html  z_854293ef6dbebf8e_cms_py.html  z_854293ef6dbebf8e_fonts_py.html  z_854293ef6dbebf8e_html_py.html  z_854293ef6dbebf8e_i18n_py.html  z_854293ef6dbebf8e_models_py.html  z_854293ef6dbebf8e_normalize_py.html  z_854293ef6dbebf8e_serve_py.html  z_854293ef6dbebf8e_settings_py.html  z_854293ef6dbebf8e_social_preview_py.html  z_854293ef6dbebf8e_utils_py.html
tests/: conftest.py  test_artifacts.py  test_atom.py
