[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "daily-writing"
version = "0.1.0"
authors = [{ name = "Joachim Jablon", email = "ewjoachim@gmail.com" }]
description = "Python-based static site generator for writing challenges"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "htpy>=25.10.0",
    "markdown>=3.10",
    "beautifulsoup4>=4.14.2",
    "pydantic>=2.12.4",
    "pydantic-extra-types[pycountry]>=2.10.6",
    "pydantic-settings>=2.12.0",
    # Social cards:
    "brotli>=1.1.0", # for fonts
    "fonttools>=4.60.1",
    "pillow>=11.3.0",
    "numpy>=2.3.4",
    # RSS:
    "feedgen>=1.0.0",
    "tzlocal>=5.3.1",
    "httpx>=0.28.1",
    "babel>=2.17.0",
    "langcodes>=3.5.1",
    "python-frontmatter>=1.1.0",
]
[project.optional-dependencies]
server = [
    "fastapi>=0.121.0",
    "pdbpp>=0.11.7",
    "uvicorn>=0.38.0",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
]

[project.scripts]
daily-writing = "daily_writing.__main__:main"

[dependency-groups]
lint = ["ruff>=0.13.3"]

[tool.basedpyright]
exclude = [".venv"]
reportUnknownMemberType = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportUnreachable = false
reportImplicitStringConcatenation = false

[tool.ruff.lint]
preview = true
extend-select = [
    "E",     # pycodestyle (Error)
    "W",     # pycodestyle (Warning)
    "F",     # pyflakes
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "PL",    # pylint
    "TID",   # flake8-tidy-imports
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SLF",   # flake8-self
    "T20",   # flake8-print
    "ICN",   # flake8-import-conventions
    "RUF",   # ruff (RUFF specific rules)
    "Q",     # flake8-quotes
    "T10",   # flake8-debugger
    "I",     # isort
]
ignore = [
    "PLR0911", # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912", # https://docs.astral.sh/ruff/rules/too-many-branches/
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0915", # https://docs.astral.sh/ruff/rules/too-many-statements/
    "RUF029",  # https://docs.astral.sh/ruff/rules/unused-async/
    "N818",    # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
    "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "S324",    # https://docs.astral.sh/ruff/rules/hashlib-insecure-hash-function/
]
fixable = ["ALL"]
extend-ignore = [
    "E501", # line too long
]
