[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"

[project]
name = "daily-writing"
dynamic = ["version"]
authors = [{ name = "Joachim Jablon", email = "ewjoachim@gmail.com" }]
description = "Python-based static site generator for writing challenges (such as writober)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # HTML:
    "htpy>=25.10.0",
    # In&out
    "pydantic>=2.12.4",
    "pydantic-extra-types[pycountry]>=2.10.6",
    "pydantic-settings>=2.12.0",
    # Fonts:
    "brotli>=1.1.0",
    "httpx>=0.28.1",
    "fonttools>=4.60.1",
    # Social cards:
    "pillow>=11.3.0",
    "numpy>=2.3.4",
    # RSS:
    "feedgen>=1.0.0",
    # i18n
    "tzlocal>=5.3.1",
    "babel>=2.17.0",
    "langcodes>=3.5.1",
    # Markdown
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "flowmark>=0.6.1",
    "markdown-it-py[plugins]>=4.0.0",
    # URL management
    "yarl>=1.24.2",
    # General utilities
    "typing-extensions>=4.15.0",
]
[project.optional-dependencies]
server = [
    "fastapi>=0.121.0",
    "pdbpp>=0.11.7",
    "uvicorn>=0.38.0",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
]

[project.scripts]
daily-writing = "daily_writing.__main__:main"

[dependency-groups]
lint = ["basedpyright>=1.39.6", "ruff>=0.13.3"]
test = ["pytest>=0.13.3", "pytest-cov>=7.1.0", "pytest-httpx>=0.36.2"]


[tool.basedpyright]
exclude = [".venv", "tests"]
reportUnknownMemberType = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportUnreachable = false
reportImplicitStringConcatenation = false
reportMissingTypeStubs = false

[tool.ruff.lint]
preview = true
extend-select = [
    "E",     # pycodestyle (Error)
    "W",     # pycodestyle (Warning)
    "F",     # pyflakes
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "PL",    # pylint
    "TID",   # flake8-tidy-imports
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SLF",   # flake8-self
    "T20",   # flake8-print
    "ICN",   # flake8-import-conventions
    "RUF",   # ruff (RUFF specific rules)
    "Q",     # flake8-quotes
    "T10",   # flake8-debugger
    "I",     # isort
]
ignore = [
    "PLR0911", # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912", # https://docs.astral.sh/ruff/rules/too-many-branches/
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0915", # https://docs.astral.sh/ruff/rules/too-many-statements/
    "RUF029",  # https://docs.astral.sh/ruff/rules/unused-async/
    "N818",    # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
    "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "S324",    # https://docs.astral.sh/ruff/rules/hashlib-insecure-hash-function/
    "PLW1514", # https://docs.astral.sh/ruff/rules/unspecified-encoding/
    "PLR6301", # https://docs.astral.sh/ruff/rules/no-self-use/
    "S101",    # https://docs.astral.sh/ruff/rules/assert/
]
fixable = ["ALL"]
unfixable = ["T201"]
extend-ignore = [
    "E501", # line too long
]


[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--strict-markers",
    "-rfE",
    "-m not benchmark",
    "--cov=daily_writing",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
testpaths = ["tests"]
filterwarnings = '''
    error
'''

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "coverage: exclude",
    "if TYPE_CHECKING:",
    "[ ]+\\.\\.\\.$",
]
